--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
     </head>
     <body>
-        
         <nav class="navbar navbar-expand-sm bg-light">
-
             <div class="container-fluid">
                 <ul class="navbar-nav">
                 <li class="nav-item">
@@ -25,8 +23,16 @@
                 </li>
               </ul>
             </div>
-          
           </nav>
+
+        <article class="container-fluid mt-3">
+            <div class="col-sm-4">
+                <p>Playlist</p>
+            </div>
+            <div class="col-sm-4" style="">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpgBMuoUrwwKS?utm_source=generator&theme=0" width="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+        </article>
 
     </body>
 
