Added some bootstrap

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
             </div>
           </nav>
 
-        <article class="container-fluid mt-3">
-            <div class="col-sm-4">
-                <p>Playlist</p>
+        <article class="container-fluid mt-2">
+            <div class="row">
+                    <p class="col">Playlist</p>
+                    <iframe class="col" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpgBMuoUrwwKS?utm_source=generator&theme=0" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
-            <div class="col-sm-4" style="">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpgBMuoUrwwKS?utm_source=generator&theme=0" width="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <div class="row">
+                    <p class="col">Other:</p>
+                    <iframe class="col" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2K81TTHr4GZX4YGc6ZrkrO?utm_source=generator" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </article>
 
