--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
 
     </head>
     <body>
-        <nav class="navbar navbar-expand-sm bg-light">
-            <div class="container-fluid">
-                <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link 1</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link 2</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link 3</a>
-                </li>
-              </ul>
+        <nav class="navbar navbar-expand-sm bg-dark">
+            <div class="container-fluid row">
+                
+                <ul class="navbar-nav col-sm-11 row">
+
+                    <li class="nav-item col-sm-3">
+                        <a class="nav-link" href="#">Link 1</a>
+                    </li>
+                    <li class="nav-item col-sm-3">
+                        <a class="nav-link" href="#">Link 2</a>
+                    </li>
+                    <li class="nav-item col-sm-3">
+                        <a class="nav-link" href="#">Link 3</a>
+                    </li>
+                </ul>
+
+              <img src="dragon-removebg.png" alt="Dragon Image" class="navbar-brand col-sm-1">
+
             </div>
           </nav>
 
