--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <iframe class="col" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2K81TTHr4GZX4YGc6ZrkrO?utm_source=generator" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </article>
+        <h1><a href="macro.html">Macro Terminology Glossary</a></h1>
 
     </body>
 
