--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                 <ul class="navbar-nav col-sm-11 row">
 
                     <li class="nav-item col-sm-3">
-                        <a class="nav-link" href="#">Link 1</a>
+                        <a class="nav-link" href="#">Dead Link 1</a>
                     </li>
                     <li class="nav-item col-sm-3">
-                        <a class="nav-link" href="#">Link 2</a>
+                        <a class="nav-link" href="#">Dead Link 2</a>
                     </li>
                     <li class="nav-item col-sm-3">
-                        <a class="nav-link" href="#">Link 3</a>
+                        <a class="nav-link" href="#">Dead Link 3</a>
                     </li>
                 </ul>
 
