--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+        <style>
+            html, body {
+                height: 100%;
+            }
+        </style>
 
     </head>
     <body>
         <nav class="navbar navbar-expand-sm bg-dark">
             <div class="container-fluid row">
+
+                <style>
+                    .nav-link {
+                        text-align: center;
+                    }
+                </style>
                 
                 <ul class="navbar-nav col-sm-11 row">
 
@@ -32,17 +43,30 @@
         <h1><a href="formulary.html">Corporate Finance Calculator</a></h1>
         <h1><a href="macro.html">Macro Terminology Glossary</a></h1>
 
-        <article class="container-fluid mt-2">
-            <div class="row">
-                    <p class="col">Playlist</p>
-                    <iframe class="col" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpgBMuoUrwwKS?utm_source=generator&theme=0" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            </div>
-            <div class="row">
-                    <p class="col">Other:</p>
-                    <iframe class="col" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2K81TTHr4GZX4YGc6ZrkrO?utm_source=generator" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            </div>
-        </article>
 
+        <style>
+            .biscuits {
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                text-align: center;
+                
+            }
+        </style>
+
+        <div class="biscuits container-fluid bg-dark text-white py-4" id="biscuits">
+            <div class="row">
+                <div class="col-sm-6">
+                    <code class="fs-5" style="text-align: center;">This site uses biscuits</code>
+                    <p class="fs-6">Accept the Britishness into your life</p>
+                </div>
+                <div class="col-sm-6 d-flex align-items-center justify-content-center">
+                    <button type="button" class="btn btn-warning me-2" onclick="window.location.href='https://stackoverflow.com';">Decline</button>
+                    <button type="button" class="btn btn-success" onclick="document.getElementById('biscuits').remove();">Accept</button>
+                </div>
+            </div>
+
+        </div>
     </body>
 
 </html>
