--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <p class="fs-6">Accept the Britishness into your life</p>
                 </div>
                 <div class="col-sm-6 d-flex align-items-center justify-content-center">
-                    <button type="button" class="btn btn-warning me-2" onclick="window.location.href='https://stackoverflow.com';">Decline</button>
+                    <button type="button" class="btn btn-warning me-2" onclick="window.location.href='https://pornhub.com/gayporn/';">Decline</button>
                     <button type="button" class="btn btn-success" onclick="document.getElementById('biscuits').remove();">Accept</button>
                 </div>
             </div>
