--- a/formulary.html
+++ b/formulary.html
@@ -26,7 +26,7 @@
     <p id="error" style="color: red;"></p>
     <script>
         document.getElementById('submit').addEventListener('click', function() {
-            var selected_function = document.getElementById('options').value;
+            var selected_function = document.getElementById('options').value;x
             var selected_percentage = Number(document.getElementById('percentage').value);
             var selected_years = Number(document.getElementById('n_years').value);
 
@@ -69,6 +69,6 @@
             }
         })
     </script>
-
+    <small style="position: fixed; bottom: 0; left: 0; width: 100%; text-align: center; background-color: #f0f0f0; padding: 10px; margin: 0;">Special thanks to Ştefan for supporting development of this project</small>
 </body>
 </html>
