--- a/formulary.html
+++ b/formulary.html
@@ -69,6 +69,6 @@
             }
         })
     </script>
-    <small style="position: fixed; bottom: 0; left: 0; width: 100%; text-align: center; background-color: #f0f0f0; padding: 10px; margin: 0;">Special thanks to Ştefan for supporting development of this project</small>
+    <small style="position: fixed; bottom: 0; left: 0; width: 100%; text-align: center; background-color: #f0f0f0; padding: 10px; margin: 0;">Special thanks to Ştefan for supporting development of this project (emotionally)</small>
 </body>
 </html>
