--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
           </nav>
         <h1><a href="formulary.html">Corporate Finance Calculator</a></h1>
         <h1><a href="macro/index.html">Macro Terminology Glossary</a></h1>
+        <img src="cown.webp" style="width: 40%;">
 
 
         <style>
             .biscuits {
-                position: absolute;
+                position: fixed;
                 bottom: 0;
                 width: 100%;
                 text-align: center;
